--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "ngx-perfect-scrollbar": "^10.1.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
