--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "ngx-perfect-scrollbar": "^10.1.1",
+    "nodemon": "^2.0.15",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
