delete and multiple delete works

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "angular-plotly.js": "^4.0.4",
     "bootstrap": "^4.6.1",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
@@ -28,6 +29,7 @@
     "mysql": "^2.18.1",
     "ngx-perfect-scrollbar": "^10.1.1",
     "nodemon": "^2.0.15",
+    "plotly.js-dist-min": "^2.8.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
@@ -39,6 +41,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@types/plotly.js-dist-min": "^2.3.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
