--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
+    "ngx-pagination": "^5.1.1",
     "ngx-perfect-scrollbar": "^10.1.1",
     "nodemon": "^2.0.15",
     "plotly.js-dist-min": "^2.8.0",
